--- a/app/src/main/res/layout/activity_display_message.xml
+++ b/app/src/main/res/layout/activity_display_message.xml
@@ -44,6 +44,7 @@
 
     <RatingBar
         android:id="@+id/ratingBar"
+        style="@android:style/Widget.Material.RatingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -53,6 +54,7 @@
         android:isIndicator="false"
         android:numStars="5"
         android:onClick="onSelectRating"
+        android:progressTint="@color/colorAccent"
         android:stepSize="1" />
 
 </RelativeLayout>
