--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primary_light"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="118dp"
+        android:layout_height="39dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="28dp"
+        android:layout_marginBottom="351dp"
+        android:background="@color/secondary_text"
+        android:gravity="center"
         android:onClick="sendMessage"
-        android:text="Button" />
+        android:text="Start"
+        android:textSize="24sp" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="225dp"
         android:layout_height="44dp"
         android:layout_below="@id/button"
