--- a/app/src/main/res/layout/activity_progress_bar.xml
+++ b/app/src/main/res/layout/activity_progress_bar.xml
@@ -7,19 +7,22 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
+        style="@android:style/Widget.Material.Light.ProgressBar.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:indeterminate="true"
         android:indeterminateOnly="false"
+        android:indeterminateTint="@color/colorAccent"
         android:visibility="visible" />
 
     <TextView
         android:id="@+id/textView2"
+        style="@android:style/Widget.Material.Light.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/progressBar"
         android:layout_centerInParent="true"
-        android:layout_centerVertical="false"
-        android:text="Bananananananana" />
+        android:text="Loading"
+        android:textSize="24sp" />
 </RelativeLayout>
