--- a/app/src/main/res/layout/activity_recommendation.xml
+++ b/app/src/main/res/layout/activity_recommendation.xml
@@ -24,8 +24,9 @@
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
         android:fontFamily="sans-serif"
-        android:nestedScrollingEnabled="true"
+        android:gravity="center_horizontal"
 
+        android:nestedScrollingEnabled="true"
         android:orientation="horizontal"
         android:padding="20dp"
         android:scrollIndicators="right"
