--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_light"
@@ -8,12 +10,12 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="118dp"
-        android:layout_height="39dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="351dp"
-        android:background="@color/secondary_text"
+        android:layout_width="178dp"
+        android:layout_height="70dp"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentBottom="false"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="69dp"
         android:gravity="center"
         android:onClick="sendMessage"
         android:text="Start"
@@ -28,5 +30,19 @@
         android:layout_marginTop="181dp"
         android:indeterminate="true"
         android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="149dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="Click Start to get your recommendations"
+        android:textAlignment="center"
+        android:textSize="30sp" />
 
 </RelativeLayout>
