--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -19,5 +19,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="22dp"
         android:onClick="exit"
-        android:text="Button" />
+        android:text="Exit" />
 </RelativeLayout>
