--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_light"
+    android:background="@drawable/netflix"
     tools:context=".MainActivity">
 
     <Button
@@ -19,7 +19,13 @@
         android:gravity="center"
         android:onClick="sendMessage"
         android:text="Start"
-        android:textSize="24sp" />
+        android:textSize="30sp"
+        android:shadowColor="#3C3B3B"
+        android:shadowDx="5"
+        android:shadowDy="5"
+        android:shadowRadius="10"
+        android:textAlignment="center"
+        />
 
     <ProgressBar
         android:id="@+id/progressBar2"
@@ -41,8 +47,14 @@
         android:layout_marginTop="149dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
+        android:backgroundTint="#AD9E9E"
+        android:shadowColor="#000000"
+        android:shadowDx="15"
+        android:shadowDy="15"
+        android:shadowRadius="30"
         android:text="Click Start to get your recommendations"
         android:textAlignment="center"
-        android:textSize="30sp" />
+        android:textColor="#FFFFFF"
+        android:textSize="40sp" />
 
 </RelativeLayout>
