--- a/app/src/main/res/layout/activity_recommendation.xml
+++ b/app/src/main/res/layout/activity_recommendation.xml
@@ -38,13 +38,36 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="118dp"
-        android:layout_height="39dp"
+        android:layout_width="133dp"
+        android:layout_height="35dp"
         android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="20dp"
         android:onClick="next"
         android:text="Next" />
+
+    <TextView
+        android:id="@+id/imdbRating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="24dp"
+        android:layout_toEndOf="@+id/imageView3"
+        android:text="9.0/10"
+        android:textSize="20sp"
+        tools:text="9.0/10" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="61dp"
+        android:layout_height="34dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/imdb" />
 
 
 </RelativeLayout>
