--- a/app/src/main/res/layout/activity_recommendation.xml
+++ b/app/src/main/res/layout/activity_recommendation.xml
@@ -39,10 +39,11 @@
     <Button
         android:id="@+id/button4"
         android:layout_width="133dp"
-        android:layout_height="35dp"
+        android:layout_height="45dp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="20dp"
         android:onClick="next"
         android:text="Next" />
