--- a/app/src/main/res/layout/recyclerview_row.xml
+++ b/app/src/main/res/layout/recyclerview_row.xml
@@ -2,16 +2,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/myTextView"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_width="247dp"
+        android:layout_height="83dp"
         android:layout_marginTop="10dp"
         android:gravity="left"
-        android:textSize="24sp"
+        android:textSize="19sp"
         android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="47dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentBottom="false"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="20dp"
+        android:layout_weight="1"
+        android:src="@drawable/imdb" />
+
+    <TextView
+        android:id="@+id/imdbRating2"
+        android:layout_width="87dp"
+        android:layout_height="66dp"
+        android:layout_alignParentBottom="false"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="24dp"
+        android:layout_weight="1"
+        android:gravity="bottom|center_horizontal|center_vertical"
+        android:text="9.0/10"
+        android:textSize="20sp"
+        tools:text="9.0/10" />
 
 </LinearLayout>
